--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -1,71 +1,6 @@
 ﻿@model List<Product>
    
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 750px;
-        }
-        a:link {
-            color: black;
-            text-decoration: underline;
-        }
-
-        a:visited {
-            color: black;
-            text-decoration: underline;
-        }
-        .Table {
-            margin: 5px;
-            width:800px;
-            float:left;
-        }
-        .total{
-            height:30px;
-            width:500px;
-            padding:5px;
-        }
-        .confirmOrder {
-            height: 30px;
-            width: 600px;
-            padding-left: 300px;
-        }
-            .confirmOrder input {
-                border-radius: 5px;
-                border: 1px solid #ccc;
-                font-size: 1em;
-                height: 30px;
-            }
-        .orders{
-            width:150px;
-            height:30px;
-            margin:5px;
-            float:right;
-        }
-            .confirmOrder input{
-                font-size:1em;
-            }
-
-            .Table table td {
-                width: 150px;
-                height: 30px;
-                border: solid 1px silver;
-                text-align: left;
-                vertical-align: middle;
-                padding-left: 2px;
-            }
-
-            .Table table tr td:first-child {
-                width: 50px;
-            }
-
-            .Table table tr td:nth-child(2) {
-                width: 250px;
-            }
-
-            .Table table tr td:last-child {
-                border: 0px;
-            }
-    </style>
+<link rel="stylesheet" href="~/css/Home/cart.css" />
 
     <div class="Table">
 
