--- a/Views/NavBar/Contacts.cshtml
+++ b/Views/NavBar/Contacts.cshtml
@@ -1,37 +1,5 @@
 ﻿
-    <style>
-        .contacts {
-            float: left;
-            height: 200px;
-            width: 500px;
-            margin-top: 20px;
-            margin-left: 20px;
-        }
-
-            .contacts img {
-                height: 50px;
-                width: 50px;
-            }
-
-            .contacts p {
-                margin: 5px;
-                display: flex;
-                align-items: center;
-                justify-content: left;
-            }
-
-        .map {
-            float: left;
-            height: 400px;
-            width: 400px;
-            margin-top: 20px;
-        }
-
-            .map iframe {
-                height: 400px;
-                width: 400px;
-            }
-    </style>
+<link rel="stylesheet" href="~/css/NavBar/contacts.css" />
 
     <div class="contacts">
         <p>Please contact us if you have any questions:  </p>
