--- a/Views/NavBar/Faq.cshtml
+++ b/Views/NavBar/Faq.cshtml
@@ -1,21 +1,5 @@
 ﻿
-<style>
-    .faq {
-        float: left;
-        height: 200px;
-        width: 500px;
-        margin-top: 20px;
-        margin-left: 20px;
-    }
-        .faq p {
-            margin: 5px;
-            display: flex;
-            align-items: center;
-            justify-content: left;
-        }
-
-
-</style>
+<link rel="stylesheet" href="~/css/NavBar/faq.css" />
 
     <div class="faq">
         <p><b>1.How many items can i buy in one order?</b></p>
