--- a/Views/Order/OrderView.cshtml
+++ b/Views/Order/OrderView.cshtml
@@ -1,80 +1,6 @@
 ﻿@model List<OrderViewModel>
 
-<style>
-    table {
-        border-collapse: collapse;
-        width: 750px;
-        margin-left:5px;
-    }
-    .Table {
-        margin: 5px;
-        width: 800px;
-        margin-right:40%;
-        height: contain;
-        float: left;
-        border: 1px solid #ac9f9f;
-        border-radius: 5px;
-    }
-    .total {
-        height: 30px;
-        width: 500px;
-        padding: 5px;
-    }
-    .userInfo {
-        height: 60px;
-        width: 500px;
-        padding: 5px;
-    }
-    .Table table td {
-        width: 150px;
-        height: 30px;
-        border: solid 1px silver;
-        text-align: left;
-        vertical-align: middle;
-        padding-left: 2px;
-    }
-    .Table span{
-        margin:4px;
-        display:inline-block;
-        float:left;
-    }
-
-    .Table table tr td:first-child {
-        width: 50px;
-    }
-
-    .Table table tr td:nth-child(2) {
-        width: 250px;
-    }
-.topTable{
-    display:inline-block;
-    height:30px;
-    width:750px;
-}
-    .topTable form{
-        height:25px;
-        width:100px;
-        float:right;
-        margin-right:50px;
-        margin-top:5px;
-    }
-    .topTable input {
-        border-radius: 5px;
-        background-color: #00ba18;
-        color: white;
-        border: 1px solid #00ba18;
-    }
-        .topTable input:hover {
-            background-color: white;
-            color: #00ba18;
-            border: 1px solid #00ba18;
-        }
-        .topTable input:disabled {
-            background-color: #f4f4f4;
-            color: #aaa;
-            border: 1px solid #aaa;
-        }
-</style>
+<link rel="stylesheet" href="~/css/Order/orderView.css" />
 
     @if (Model != null)
     {
