--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -1,29 +1,5 @@
 ﻿
-    <style>
-        input {
-            border-radius: 5px;
-            border: 1px solid #ccc;
-            font-size: 1em;
-            height: 30px;
-        }
-        .Login {
-            display: flex;
-            justify-content: center;
-        }
-
-            .Login p:first-child {
-                padding-top: 10px;
-            }
-
-            .Login input {
-                font-size: 1em;
-            }
-
-        .button {
-            margin: 5px 0px 0px 70px;
-            height: 25px;
-        }
-    </style>
+ <link rel="stylesheet" href="~/css/Account/register.css" />
 
     <div class="Login">
         <form method="post" action="~/Account/Register">
