--- a/Views/Manager/AddProduct.cshtml
+++ b/Views/Manager/AddProduct.cshtml
@@ -1,56 +1,5 @@
 ﻿
-    <style>
-        input[type="text"] {
-            height: 25px;
-            width: 180px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        input[type="number"] {
-            height: 25px;
-            width: 180px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-
-        .newProduct {
-            height: 700px;
-            display: flex;
-            justify-content: center;
-        }
-
-        .select {
-            height: 80px;
-            margin-top: 15px;
-        }
-
-        .inputs {
-            height: 120px;
-            margin-top: 15px;
-        }
-
-        .button {
-            height: 30px;
-            width: 180px;
-            margin-top: 25px;
-            display: flex;
-            justify-content: center;
-        }
-
-            .button input {
-                background-color: #00ba18;
-                color: white;
-                border: 1px solid #00ba18;
-                border-radius: 5px;
-            }
-
-                .button input:hover {
-                    background-color: white;
-                    color: #00ba18;
-                    border: 1px solid #00ba18;
-                }
-    </style>
+<link rel="stylesheet" href="~/css/Manager/addProduct.css" />
 
     <div class="newProduct">
         <form action="~/Manager/AddProduct">
