--- a/Views/NavBar/Aboutus.cshtml
+++ b/Views/NavBar/Aboutus.cshtml
@@ -1,19 +1,5 @@
 ﻿
-    <style>
-        .aboutus {
-            float: left;
-            height: 200px;
-            width: 800px;
-            margin-top: 20px;
-            margin-left: 20px;
-        }
-
-            .aboutus p {
-                display: flex;
-                align-items: center;
-                justify-content: left;
-            }
-    </style>
+<link rel="stylesheet" href="~/css/NavBar/aboutUs.css" />
 
     <div class="aboutus">
         <p>This is e-commerce app designed for testing ASP.NET Core MVC technology.</p>
